--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Leul Assefa <leulassefa255@gmail.com>
+ Eyosiyas Dibancho <>
