--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Leul Assefa <leulassefa255@gmail.com>
-Eyosiyas Dibancho <eyosi4love94@gmail.com>
+Eyosiyas Dibancho <eyosi4love@gmail.com>
